syntax = "proto3";

//import "google/protobuf/timestamp.proto";

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  double timestamp = 6;  // Unique ID number for this person.
  int64 age_in_seconds = 7;
  float temperature = 8;
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
//
//  google.protobuf.Timestamp last_updated = 5;
}